# students-stats

./: Dockerfile  main.py  pyproject.toml
db/: base.py  event.py
models/: event.py
routes/: __init__.py  events.py  events_stats.py
views/: add_event.py  remove_events.py  search_event.py
views/workers/: __init__.py  cleanup_events_worker.py
